update html file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="form_box">
           <div class="try_box">
             <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
-            <form action="" method="git" target="_blank">
+            <form action="" method="post" target="_blank">
               <input type="text" placeholder="First Name" name="First Name" />
               <img
                 loading="lazy"
